# capstone_render

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  additive_blend.cpp  april_tag.py  capture.py  face_masks.glb  intrinsic_calibration.py  landmark.cpp  makeup_transfer.cpp  makeup_transfer.hpp  new.txt  ray-ban_glasses.glb  realsense_to_3d.cpp  reconstruct.cpp  reconstruct.hpp  stereo_calibration.py  vcpkg.json
.cache/clangd/index/: Blendshape.hpp.42B3BDC8AC1A6F4C.idx  EdgeTopology.hpp.2F014E908BECC765.idx  ExpressionModel.hpp.8C2598C4FD1DB348.idx  FragmentShader.hpp.FF9E3BDD8333207A.idx  Image.hpp.412056E02E7DC785.idx  Landmark.hpp.68F9605A50F6DD64.idx  LandmarkMapper.hpp.D86EBFC5BB59F494.idx  Mesh.hpp.62EBF8E1F0982CFF.idx  MorphableModel.hpp.BB288A9B5E462171.idx  PcaModel.hpp.0FD741B0E15D8A32.idx  Pixel.hpp.43F4477C701F626D.idx  PixelTraits.hpp.269792AE6606B8DF.idx  ProjectionType.hpp.D5667982DFFE6D0C.idx  Rasterizer.hpp.17232D260787B5B1.idx  RayDirection.hpp.150E98F1A1246715.idx  Rect.hpp.0324CD2EBCAA3568.idx  RenderingParameters.hpp.0CD9839C13B51761.idx  SoftwareRenderer.hpp.8BD8B30C0E81269D.idx  Texture.hpp.A60FE863388B793E.idx  Vertex.hpp.4C632D9F14411FD7.idx  VertexShader.hpp.7F86FAAE93EE4DD8.idx  access.hpp.9476621B84B20B03.idx  access.hpp.E7DCC47BD729A840.idx  allocators.h.470C7105D3E8180D.idx  allocators.h.68455E8B62E0F5D2.idx  array.hpp.4590EF8D15C9961B.idx  array.hpp.5629F32FBF25B8BD.idx  background_shader.cpp.EF217703C0BFECFF.idx  background_shader.h.67208D9E3C0FAC37.idx  base64.hpp.934A4C502AF02FAC.idx  base64.hpp.DE7E9C7770DC3E13.idx  base_class.hpp.2C45FE72E6914223.idx  base_class.hpp.E5B1B3AFB35A7F1F.idx  biginteger.h.1A9BA9990A6A1B87.idx  biginteger.h.AE9D628F2858C3BD.idx  binary.hpp.332E09830C0E0442.idx  binary.hpp.FC3A16553A6719D6.idx  blendshape_fitting.hpp.599BA9DB78F4A11C.idx  cereal.hpp.13C93A2A22D56E2A.idx  cereal.hpp.22D518E2B46C749B.idx  (+160 more)
calibration/: capture.py
output/: fitted_face.mtl
shaders/: fragments.glsl  mesh.frag  mesh.vert
src/: background_shader.cpp  background_shader.h  common.hpp  depth_camera.cpp  depth_camera.hpp  face_reconstruction.cpp  face_reconstruction.hpp  load_gltf.cpp  load_gltf.hpp  main.cpp  model_renderer.cpp  model_renderer.hpp  renderer.cpp  renderer.hpp  second_cam.cpp  second_cam.hpp  shaders.cpp  shaders.h  tiny_gltf_loader.cpp
utils/: calib_io.py
